--- a/graphs/titulados2011/consulta1.html
+++ b/graphs/titulados2011/consulta1.html
@@ -35,7 +35,7 @@
 
       <h1>Grafo: Titulados 2011</h1>
 
-      <p>CONSULTA 1: Cantidad total de egresados por región durante el 2011 clasificados por tipo de institución que la imparte. (clasificación 0 Institución)</p>
+      <p>CONSULTA 1: Cantidad total de egresados por región durante el 2011, clasificados por tipo de institución que la imparte. (clasificación 0 Institución)</p>
 
       <table id="named-graph-list" class="table">
 	<tbody>
